Mostly done with verse action bar success messages.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -196,14 +196,14 @@ en:
     no new:                                     "No new notifications"
     view all:                                   "View all Notifications"
   likes:
-    create success:                             "Your like has been saved"
+    create success:                             "Success! Your like has been saved"
     create failure:                             "Your like could not be saved"
     destroy success:                            "Like deleted"
     destroy failure:                            "Your like could not be deleted"
   comments:
     view all N:                                 "View all %{count} comments"
     post comment:                               "Post a comment"
-    create success:                             "Comment posted"
+    create success:                             "Success! Your comment was posted."
     create failure:                             "Comment could not be posted"
     destroy success:                            "Comment deleted"
     destroy failure:                            "Comment could not be deleted"
@@ -220,7 +220,7 @@ en:
   friendships:
     offer success:                              "Friendship request sent"
     offer failure:                              "Error sending friendship request"
-    create success:                             "You're now friends"
+    create success:                             "Success! You're now friends."
     create failure:                             "Error creating friendship"
     destroy success:                            "Request declined"
     destroy failure:                            "Error declining request"
@@ -287,7 +287,7 @@ en:
     cancel:                                     "Cancel"
     pop out:                                    "Pop out"
     none found:                                 "No notes found..."
-    create success:                             "Note saved"
+    create success:                             "Success! Your note was saved."
     create failure:                             "Error saving note"
     destroy success:                            "Note deleted"
     destroy failure:                            "Error deleting note"
@@ -533,7 +533,7 @@ en:
     not found:                                  "Bookmarks give you a quick reference guide to your favorite passages or to the last chapter you read in a particular book. To add a bookmark, select a verse in the Bible reader and then click the Selected button at the top of the reader."
     other user not found:                       "%{username} hasn't saved any bookmarks yet."
     creation form errors:                       "The following error(s) prevented creation of your bookmark:"
-    create success:                             "Bookmark saved"
+    create success:                             "Success! Your bookmark was saved."
     destroy success:                            "Bookmark removed"
     destroy failure:                            "Error deleting bookmark"
     update success:                             "Bookmark updated"
@@ -719,7 +719,7 @@ en:
       description:                              "While reading the Bible, select a verse and highlight it. Return here to view, edit, or delete your highlight."
     none user:                                  "%{username} has no highlights"
     choose color:                               "Choose Color"
-    create success:                             "Highlight saved"
+    create success:                             "Success! Your highlight was saved"
     create failure:                             "Error saving highlight"
     destroy success:                            "Highlight deleted"
     destroy failure:                            "Error deleting highlight"
