Notification settings are now sent as proper true/false values, added likes to notification settings.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -520,6 +520,7 @@ en:
       friendships:                              "Notify me about friend requests"
       moments:                                  "Notify me about friends' activity"
       comments:                                 "Notify me about comments on my activity"
+      likes:                                    "Notify me about likes on my activity"
   bookmarks:
     new:                                        "New Bookmark"
     edit:                                       "Edit"
