You like this - personalize with You instead of {name} for likes info.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -161,6 +161,8 @@ en:
     lower:                                      "or"
     upper:                                      "OR"
   moments:
+    user:
+      you:                                      "You"
     vod:
       title:                                    "Verse of the day"
     friendship:
