--- a/config/locales/po/en/api.po
+++ b/config/locales/po/en/api.po
@@ -1,14 +1,11 @@
-# API Strings
 #
-# Translators:
-# Brad Belyeu <brad.belyeu@lifechurch.tv>, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-08-30 16:35+0000\n"
-"Last-Translator: bradleylamar <brad.belyeu@lifechurch.tv>\n"
+"PO-Revision-Date: 2013-11-15 20:32+0000\n"
+"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,40 +38,43 @@ msgid "moment.highlight.self.title"
 msgstr "You highlighted <b>{reference_human}</b>"
 
 msgid "moment.note.title"
-msgstr "{name} added a note <b>{title}</b>"
+msgstr "{name} added a note, <b>{title}</b>"
 
 msgid "moment.note.self.title"
-msgstr "You added a note <b>{title}</b>"
+msgstr "You added a note, <b>{title}</b>"
 
 msgid "moment.bible.download.title"
-msgstr "{name} downloaded the <b>{version}</b> Bible"
+msgstr "{name} downloaded the version, <b>{version}</b>"
 
 msgid "moment.bible.download.self.title"
-msgstr "You downloaded the <b>{version}</b> Bible"
+msgstr "You downloaded the version, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} started the reading plan <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} started a plan"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "You started the reading plan <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Started a plan"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} completed day <b>{day}</b> of <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} completed day <b>{segment}</b> of the plan, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "You completed day <b>{day}</b> of <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "You completed day <b>{segment}</b> of the plan, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} completed <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Day {segment} of {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "You completed <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} completed a plan"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Completed a plan"
 
 msgid "moment.badge.earned.title"
-msgstr "{name} earned a badge <b>{title}</b>"
+msgstr "{name} earned the <b>{title}</b> badge"
 
 msgid "moment.badge.earned.self.title"
-msgstr "You earned a badge <b>{title}</b>"
+msgstr "You earned the <b>{title}</b> badge"
 
 msgid "moment.video.watched.title"
 msgstr "{name} watched <b>{title}</b>"
@@ -83,16 +83,16 @@ msgid "moment.video.watched.self.title"
 msgstr "You watched <b>{title}</b>"
 
 msgid "notifications.friendships.offer"
-msgstr "{name} wants to be your friend"
+msgstr "{name} wants to be your friend on YouVersion"
 
 msgid "notifications.friendships.accept"
 msgstr "{name} accepted your friend request"
 
 msgid "notifications.friendships.nowfriends"
-msgstr "You and {name} are now friends"
+msgstr "{name} is now your friend"
 
 msgid "notifications.friendships.suggestion"
-msgstr "Do you want to be friends with {name}?"
+msgstr "Do you want to be friends with {name} on YouVersion?"
 
 msgid "notifications.comments.moment.mine.bookmark"
 msgstr "{name} commented on your bookmark: “{comment}”"
@@ -102,6 +102,21 @@ msgstr "{name} commented on your highlight: “{comment}”"
 
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} commented on your note: “{comment}”"
+
+msgid "notifications.likes.moment.mine.bookmark"
+msgstr "{name} likes your bookmark, {reference_human}"
+
+msgid "notifications.likes.moment.mine.highlight"
+msgstr "{name} likes your highlight, {reference_human}"
+
+msgid "notifications.likes.moment.mine.note.reference"
+msgstr "{name} likes your note on {reference_human}"
+
+msgid "notifications.likes.moment.mine.note.title"
+msgstr "{name} likes your note, “{title}”"
+
+msgid "notifications.likes.moment.mine.note.no_title_no_reference"
+msgstr "{name} likes your note"
 
 msgid "notifications.comments.moments.friend.owner.bookmark"
 msgstr "{moment_owner_name} also commented on their bookmark: “{comment}”"
@@ -128,19 +143,19 @@ msgid "notifications.moments.create.highlight"
 msgstr "{name} highlighted {reference_human}"
 
 msgid "notifications.moments.create.note.reference"
-msgstr "{name} created a note on {reference_human}"
+msgstr "{name} added a note on {reference_human}"
 
 msgid "notifications.moments.create.note.title"
-msgstr "{name} created a note, “{title}”"
+msgstr "{name} added a note, “{title}”"
 
 msgid "notifications.moments.create.note.no_title_no_reference"
-msgstr "{name} created a note"
+msgstr "{name} added a note"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
-msgid_plural "You have %d friendship requests"
-msgstr[0] "You have a friendship request"
-msgstr[1] "You have %d friendship requests"
+msgid_plural "You have %d friend requests"
+msgstr[0] "You have a friend request"
+msgstr[1] "You have %d friend requests"
 
 msgid "notifications.system.test"
 msgstr "Download our Kids Bible App now!!!"
@@ -155,7 +170,10 @@ msgid "share.invite_email_subject"
 msgstr "Do you have the Bible App?"
 
 msgid "share.invite_email_body"
-msgstr "I've been enjoying the Bible App from YouVersion and thought you might like it too. I'm opening the Bible a lot more these days because it's so easy to read, watch, listen, and share. It even has Plans, which have a selection of the Bible all picked out and waiting for me every day. \n\nYou can get it (free!) for pretty much any mobile device here:"
+msgstr ""
+"I've been enjoying the Bible App from YouVersion and thought you might like it too. I'm opening the Bible a lot more these days because it's so easy to read, watch, listen, and share. It even has Plans, which have a selection of the Bible all picked out and waiting for me every day.\n"
+"\n"
+"You can get it (free!) for pretty much any mobile device here:"
 
 msgid "share.invite_twitter"
 msgstr "The @YouVersion Bible App has a permanent spot on my home screen. Read, watch, listen, and share…all in a free app:"
