--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -176,7 +176,9 @@ en:
       go to scripture:                          "Go to scripture"
       load more:                                "Load more"
       like:                                     "Like"
+      liked:                                    "Liked"
       like title:                               "Like this"
+      last comment:                             "Last comment"
       share:                                    "Share"
       share title:                              "Share this with friends or family"
       comment:                                  "Comment"
