--- a/config/locales/po/de/api.po
+++ b/config/locales/po/de/api.po
@@ -1,134 +1,237 @@
+# #-#-#-#-#  moments.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
-# Brad Belyeu <brad.belyeu@lifechurch.tv>, 2013
+# Translators:
+# Anke Stoye <ankestoyeyouversion@gmail.com>, 2014
+# bookworm1966 <bookworm1966@gmx.de>, 2013
+# Friedrich-Wilhelm Prussak <info@prussak.de>, 2013
+# #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
+# API Strings
+#
+# Translators:
+# Translators:
+# Translators:
+# Anke Stoye <ankestoyeyouversion@gmail.com>, 2013-2014
+# bookworm1966 <bookworm1966@gmx.de>, 2013
+# Friedrich-Wilhelm Prussak <info@prussak.de>, 2013-2014
+# #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
+# App sharing
+#
+# Translators:
+# Translators:
+# Anke Stoye <ankestoyeyouversion@gmail.com>, 2013-2014
+# Brian Russell <brian.russell@youversion.com>, 2013
+# Friedrich-Wilhelm Prussak <info@prussak.de>, 2013
+# Kevin Morey <kevin.morey@lifechurch.tv>, 2013
+# Roman Gebath <Roman.Gebath@gmail.com>, 2013
+#, fuzzy
 msgid ""
 msgstr ""
+"#-#-#-#-#  moments.po (Backend (YouVersion))  #-#-#-#-#\n"
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-08-30 16:35+0000\n"
-"Last-Translator: bradleylamar <brad.belyeu@lifechurch.tv>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2014-02-06 23:00+0000\n"
+"Last-Translator: Anke Stoye <ankestoyeyouversion@gmail.com>\n"
+"Language-Team: German (http://www.transifex.com/projects/p/yv-backend/language/de/)\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"#-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#\n"
+"Project-Id-Version: Backend (YouVersion)\n"
+"Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
+"POT-Creation-Date: 2013-08-30 11:23-0500\n"
+"PO-Revision-Date: 2014-02-24 11:00+0000\n"
+"Last-Translator: Anke Stoye <ankestoyeyouversion@gmail.com>\n"
+"Language-Team: German (http://www.transifex.com/projects/p/yv-backend/language/de/)\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"#-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#\n"
+"Project-Id-Version: Backend (YouVersion)\n"
+"Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
+"POT-Creation-Date: 2013-04-30 11:23-0500\n"
+"PO-Revision-Date: 2014-03-02 16:51+0000\n"
+"Last-Translator: Anke Stoye <ankestoyeyouversion@gmail.com>\n"
+"Language-Team: German (http://www.transifex.com/projects/p/yv-backend/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+msgid "moment.system.bible_series_promo.title"
+msgstr "<i>Bibel-Serie</i>"
+
+msgid "moment.system.bible_series_promo.body"
+msgstr "Sieh dir heute Abend die <i>Bibel-Serie</i> an!"
+
 msgid "moment.bookmark.title"
-msgstr "{name} Deutch bookmarked <b>{reference_human}</b>"
+msgstr "{name} hat ein Lesezeichen für <b>{reference_human}</b> angelegt"
 
 msgid "moment.bookmark.self.title"
-msgstr "You bookmarked <b>{reference_human}</b>"
+msgstr "Du hast ein Lesezeichen für <b>{reference_human}</b> angelegt."
 
 msgid "moment.friendship.title"
-msgstr "{user_name} is now deutsche friends with <b>{friend_name}</b>"
+msgstr "{user_name} ist nun mit <b>{friend_name}</b> befreundet"
 
 msgid "moment.friendship.self.title"
-msgstr "You are now friends with <b>{friend_name}</b>"
+msgstr "Du bist nun mit <b>{friend_name}</b> befreundet"
 
 msgid "moment.highlight.title"
-msgstr "{name} highlighted <b>{reference_human}</b>"
+msgstr "{name} hat <b>{reference_human}</b> markiert"
 
 msgid "moment.highlight.self.title"
-msgstr "You highlighted <b>{reference_human}</b>"
+msgstr "Du hast <b>{reference_human}</b> markiert"
 
 msgid "moment.note.title"
-msgstr "{name} added a deutsche note <b>{title}</b>"
+msgstr "{name} hat eine Notiz mit dem Titel <b>{title}</b> verfasst"
 
 msgid "moment.note.self.title"
-msgstr "You added a note <b>{title}</b>"
+msgstr "Du hast eine Notiz mit dem Titel <b>{title}</b> hinzugefügt"
 
 msgid "moment.bible.download.title"
-msgstr "{name} downloaded the <b>{version}</b> Bible"
+msgstr "{name} hat die <b>{version}</b> heruntergeladen"
 
 msgid "moment.bible.download.self.title"
-msgstr "You downloaded the <b>{version}</b> Bible"
+msgstr "Du hast die <b>{version}</b> heruntergeladen."
 
 msgid "moment.reading_plan.subscription.title"
-msgstr "{name} started the reading plan <b>{title}</b>"
+msgstr "{name} hat den Leseplan <b>\"{title}\"</b> begonnen"
 
 msgid "moment.reading_plan.subscription.self.title"
-msgstr "You started the reading plan <b>{title}</b>"
+msgstr "Du hast den Leseplan <b>\"{title}\"</b> begonnen"
 
 msgid "moment.reading_plan.day.title"
-msgstr "{name} completed day <b>{day}</b> of <b>{title}</b>"
+msgstr "{name} hat den <b>{day}.</b>  Tag im Leseplan <b>\"{title}\"</b> abgeschlossen"
 
 msgid "moment.reading_plan.day.self.title"
-msgstr "You completed day <b>{day}</b> of <b>{title}</b>"
+msgstr "Du hast den <b>{day}.</b> Tag vom Leseplan <b>\"{title}\"</b> abgeschlossen"
 
 msgid "moment.reading_plan.completion.title"
-msgstr "{name} completed <b>{title}</b>"
+msgstr "{name} hat den Leseplan <b>\"{title}\"</b> abgeschlossen"
 
 msgid "moment.reading_plan.completion.self.title"
-msgstr "You completed <b>{title}</b>"
+msgstr "Du hast den Leseplan <b>\"{title}\"</b> abgeschlossen"
 
 msgid "moment.badge.earned.title"
-msgstr "{name} earned a badge <b>{title}</b>"
+msgstr "{name} das <b>\"{title}\"</b> Abzeichen erhalten"
 
 msgid "moment.badge.earned.self.title"
-msgstr "You earned a badge <b>{title}</b>"
+msgstr "Du hast das <b>\"{title}\"</b> Abzeichen erhalten"
 
 msgid "moment.video.watched.title"
-msgstr "{name} watched <b>{title}</b>"
+msgstr "{name} hat <b>{title} angeschaut</b>"
 
 msgid "moment.video.watched.self.title"
-msgstr "You watched <b>{title}</b>"
+msgstr "Du hast <b>{title} angeschaut</b>"
 
 msgid "notifications.friendships.offer"
-msgstr "{name} wants to be your friend"
+msgstr "{name} möchte auf YouVersion mit dir befreundet sein"
 
 msgid "notifications.friendships.accept"
-msgstr "{name} accepted your friend request"
+msgstr "{name} hat deine Freundschaftsanfrage angenommen"
+
+msgid "notifications.friendships.nowfriends"
+msgstr "Du bist jetzt mit {name} befreundet"
 
 msgid "notifications.friendships.suggestion"
-msgstr "Do you want to be friends with {name}?"
+msgstr "Möchtest du auf YouVersion mit {name} befreundet sein?"
 
 msgid "notifications.comments.moment.mine.bookmark"
-msgstr "{name} commented on your Bookmark"
+msgstr "{name} hat dein Lesezeichen kommentiert: “{comment}”"
 
 msgid "notifications.comments.moment.mine.highlight"
-msgstr "{name} commented on your Highlight"
+msgstr "{name} hat deine Markierung so kommentiert: “{comment}”"
 
 msgid "notifications.comments.moment.mine.note"
-msgstr "{name} commented on your Note"
+msgstr "{name} hat deine Notiz kommentiert: “{comment}”"
+
+msgid "notifications.likes.moment.mine.bookmark"
+msgstr "{name} gefällt dein Lesezeichen für {reference_human}"
+
+msgid "notifications.likes.moment.mine.highlight"
+msgstr "{name} gefällt deine Hervorhebung für {reference_human}"
+
+msgid "notifications.likes.moment.mine.note.reference"
+msgstr "{name} gefällt deine Notiz zu {reference_human}"
+
+msgid "notifications.likes.moment.mine.note.title"
+msgstr "{name} gefällt deine Notiz mit dem Titel “{title}”"
+
+msgid "notifications.likes.moment.mine.note.no_title_no_reference"
+msgstr "{name} gefällt deine Notiz"
+
+msgid "notifications.comments.moments.friend.owner.bookmark"
+msgstr "{moment_owner_name} hat sein/ihr Lesezeichen ebenfalls kommentiert: “{comment}”"
+
+msgid "notifications.comments.moments.friend.bookmark"
+msgstr "{commenter_name} hat {moment_owner_name}s Lesezeichen ebenfalls kommentiert: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.highlight"
+msgstr "{moment_owner_name} hat seine/ihre Markierung ebenfalls kommentiert: “{comment}”"
+
+msgid "notifications.comments.moments.friend.highlight"
+msgstr "{commenter_name} hat {moment_owner_name}s Markierung auch kommentiert: “{comment}”"
+
+msgid "notifications.comments.moments.friend.owner.note"
+msgstr "{moment_owner_name} hat deine Notiz ebenfalls kommentiert: “{comment}”"
+
+msgid "notifications.comments.moments.friend.note"
+msgstr "{commenter_name} hat {moment_owner_name}s Notiz ebenfalls kommentiert: “{comment}”"
+
+msgid "notifications.moments.create.bookmark"
+msgstr "{name} hat ein Lesezeichen für {reference_human} angelegt."
+
+msgid "notifications.moments.create.highlight"
+msgstr "{name} hat {reference_human} markiert"
+
+msgid "notifications.moments.create.note.reference"
+msgstr "{name} hat eine Notiz zu {reference_human} hinzugefügt"
+
+msgid "notifications.moments.create.note.title"
+msgstr "{name} hat die Notiz “{title}” hinzugefügt"
+
+msgid "notifications.moments.create.note.no_title_no_reference"
+msgstr "{name} hat eine Notiz angelegt"
 
 #. TRANSLATORS: Plural test
 msgid "notifications.friendships.count"
-msgid_plural "You have %d friendship requests"
-msgstr[0] "You have a friendship request"
-msgstr[1] "You have %d friendship requests"
-
-msgid "notifications.liked"
-msgstr "{name} liked your {kind}"
-
-msgid "notifications.commented"
-msgstr "{name} commented on your {kind}"
+msgid_plural "You have %d friend requests"
+msgstr[0] "Du hast eine Freundschaftsanfrage"
+msgstr[1] "Du hast %d Freundschaftsanfragen"
 
 msgid "notifications.system.test"
-msgstr "Download our Kids Bible App now!!!"
+msgstr "Lade unsere Bibel App für Kinder jetzt herunter!!!"
 
 msgid "share.invite_sms_prefix"
-msgstr "From {name}:"
+msgstr "Von {name}:"
 
 msgid "share.invite_sms"
-msgstr "Do you have the Bible App from YouVersion? I love it, and I think you would too. Here's the link:"
+msgstr "Hast du die Bibel App von YouVersion? Ich mag sie sehr und denke, sie würde dir auch gefallen. Hier ist der Link:"
 
 msgid "share.invite_email_subject"
-msgstr "Do you have the Bible App?"
+msgstr "Hast du die Bibel App?"
 
 msgid "share.invite_email_body"
-msgstr "I've been enjoying the Bible App from YouVersion and thought you might like it too. I'm opening the Bible a lot more these days because it's so easy to read, watch, listen, and share. It even has Plans, which have a selection of the Bible all picked out and waiting for me every day. \n\nYou can get it (free!) for pretty much any mobile device here:"
+msgstr ""
+"Ich benutze die Bibel App von YouVersion sehr gern und dachte, sie könnte dir auch gefallen. Ich mache die Bibel oft auf, weil es so leicht ist, sie zu lesen, die Videos anzuschauen, der Hörbibel zu lauschen und sie zu teilen. Sie bietet sogar Lesepläne mit bereits ausgewählten Bibelabschnitten, die jeden Tag auf mich warten.\n"
+"\n"
+"Du kannst sie (kostenlos!) für praktisch jedes mobile Gerät hier herunterladen:"
 
 msgid "share.invite_twitter"
-msgstr "The @YouVersion Bible App has a permanent spot on my home screen. Read, watch, listen, and share…all in a free app:"
+msgstr "Die Bibel @YouVersion ist auf meinem Start-Bildschirm. Lesen, ansehen, anhören und teilen ... all das in einer kostenlosen App:"
 
 msgid "share.invite_twitter_direct"
-msgstr "Do you have the Bible App from @YouVersion? I love it, and I think you would too. Here's the link:"
+msgstr "Hast du die Bibel App von @YouVersion? Ich mag sie sehr und denke, du würdest sie auch mögen. Hier ist der Link:"
 
 msgid "share.invite_facebook"
-msgstr "I love the Bible App! It's really helped me make the Bible part of my everyday life. It lets me highlight, listen to audio Bibles, make notes, follow devotional plans…even watch videos! Go download it now (it's free):"
+msgstr "Ich mag die Bibel App sehr! Durch sie ist die Bibel inzwischen zu einem Teil meines täglichen Lebens geworden. Sie gibt mir die Möglichkeit, Verse zu markieren, Hörbibeln zu lauschen, Notizen zu machen, Lesepläne mit Andachten zu benutzen ... und sogar Videos anzuschauen! Lade sie dir jetzt (kostenlos) herunter:"
 
 msgid "share.invite_facebook_direct"
-msgstr "Do you have the Bible App? I love it, and I think you would too. Here's the link:"
+msgstr "Hast du die Bibel App? Ich mag sie sehr und denke, du würdest sie auch mögen. Hier ist der Link:"
